--- a/css/index.css
+++ b/css/index.css
@@ -1,95 +1,115 @@
-         ::-webkit-scrollbar {
-                width: 12px;
-            }
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
+}
 
-            ::-webkit-scrollbar-track {
-                -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-                border-radius: 10px;
-            }
+body {
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color:#E4E4E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+    background-attachment:fixed;
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
+    height:100%;
+    margin:0px;
+    padding:0px;
+    text-transform:uppercase;
+    width:100%;
+}
 
-            ::-webkit-scrollbar-thumb {
-                border-radius: 10px;
-                -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-            }
-            #header {
-                position: fixed;
-                top: 0;
-                left: 0;
-                right: 0;
-                height: 43px;
-                padding:2%;
-                padding-left: 5px;
-                background-color:#FCAF9E;
-                font-size:20px;
-            }
-            #footer {
-                position: fixed;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                height: 44px;
-                background-color: #abcdef;
-            }
-            .content {
-                position: fixed;
-                top: 43px;
-                bottom: 44px;
-                left: 0;
-                right: 0;
-                overflow: auto;
-                padding-left:5px;
-                padding-right: 5px;
-                padding-top:5px;
-                padding-bottom:5px;
-            }
-            .content div{
-                padding:0px;
-            }
-            
- /*//////////////////End default style////////////////////////////////////////////*/
+/* Portrait layout (default) */
+.app {
+    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    position:absolute;             /* position in the center of the screen */
+    left:50%;
+    top:50%;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
+    text-align:center;
+    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
+                                   /* offset horizontal: half of text area width */
+}
+
+/* Landscape layout (with min-width) */
+@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
+    .app {
+        background-position:left center;
+        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
+        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
+                                      /* offset horizontal: half of image width and text area width */
+    }
+}
+
+h1 {
+    font-size:24px;
+    font-weight:normal;
+    margin:0px;
+    overflow:visible;
+    padding:0px;
+    text-align:center;
+}
+
+.event {
+    border-radius:4px;
+    -webkit-border-radius:4px;
+    color:#FFFFFF;
+    font-size:12px;
+    margin:0px 30px;
+    padding:2px 0px;
+}
+
+.event.listening {
+    background-color:#333333;
+    display:block;
+}
+
+.event.received {
+    background-color:#4B946A;
+    display:none;
+}
+
+@keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
  
-/* /////////////////Chat box style/////////////////////////////////*/
-
-#messagecontent{
-     -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  border: none;
-  padding-top: 7px;
-  padding-top: 7px;
-  -webkit-border-radius: 0 0 10px 10px;
-  border-radius: 0 0 10px 10px;
-  font: normal "Courier New", Courier, monospace;
-  color: rgba(5,0,0,1);
-  text-align: justify;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-/*  background: rgba(242,239,239,0.7);*/
-  -webkit-box-shadow: 3px 3px 2px 0 rgba(0,0,0,0.3) ;
-  box-shadow: 0 3px 2px 0 rgba(0,0,0,0.3);
-  right:0;
+@-webkit-keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
 }
- #sender_message_user{
-  background-color:#E9EEEE;   
- }
-#sender_message_messagestyle {
-    background-color:#F8F7F7;
-    padding:5px;
-    word-wrap:break-word;
-    overflow-wrap: break-word;
-    white-space: pre-wrap;
+ 
+.blink {
+    animation:fade 3000ms infinite;
+    -webkit-animation:fade 3000ms infinite;
 }
- #reciever_message_user
- {
-     background-color:#97DED6;   
- }
- #reciever_message_messagestyle {
-    background-color:#E5FEFB;
-    padding:5px;
-    word-wrap:break-word;
-    overflow-wrap: break-word;
-    white-space: pre-wrap; 
- }
- #sender_img_div{
-     width:40px;
- }
