--- a/css/index.css
+++ b/css/index.css
@@ -10,5 +10,12 @@
     top: 54px;
     left: 0;
     right: 0;
-    font-size:20px;
+    padding-bottom:0px;    
+    font-size:18px;
+    background-color:white;
+}
+#tablebody{
+    margin-top:105px;
+    left: 0;
+    right: 0;
 }
