--- a/css/index.css
+++ b/css/index.css
@@ -19,3 +19,20 @@
     left: 0;
     right: 0;
 }
+#loader {
+    position:fixed;
+    top: 45%;
+    left: 40%;
+    width:80px;
+    height:80px;
+    opacity: 0.7;
+}
+#loaderbackground
+{
+    position:fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+    background-color: rgba(249, 249,249, 0.4);
+}
