--- a/css/index.css
+++ b/css/index.css
@@ -22,10 +22,11 @@
 #loader {
     position:fixed;
     top: 45%;
-    left: 40%;
+    left: 39%;
     width:80px;
     height:80px;
     opacity: 0.7;
+    text-align:center;
 }
 #loaderbackground
 {
