--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,15 @@
     border-radius: 0px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
 html
 {
+            -webkit-user-select: none;
+            -webkit-touch-callout: none;  
+            -webkit-tap-highlight-color: rgba(0,0,0,0); 
             height: 100%;
             overflow-y: scroll;
 }
