--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,58 @@ html{
     -webkit-touch-callout: none;  
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
+
+body {
+  margin: 0;
+}
+.menu {
+  /*this is the nav*/
+  background: #3c3933;
+  width: 240px;
+  height: 100%;
+  top: 0;
+  position: fixed;
+  left: -240px;
+}
+.menu a {
+  display: block;
+  /* drops the nav vertically*/
+  color: #fff;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 14px;
+}
+.push-left {
+  left: 0;
+}
+.bodypush {
+  overflow-x: hidden;
+  position: relative;
+  left: 0;
+}
+.pushmenu-push-toright {
+  left: 240px;
+}
+/*Transition*/
+
+.menu,
+.bodypush {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
 #headerhome {
             position: fixed;
             top: 0;
