--- a/css/index.css
+++ b/css/index.css
@@ -21,10 +21,8 @@ html{
     -webkit-touch-callout: none;  
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
-
-
-body {
-  margin: 0;
+body{
+ background-color: #FFFFFF; 
 }
 .menu {
   /*this is the nav*/
@@ -64,21 +62,10 @@ body {
 }
 
 
-
-
-
-
-
-
-
-
-
-#headerhome {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            font-size:20px;
+.headerhome {
+            position: absolute;
+            margin:0 auto;
+            width:100%;
        }
 #headertable {
     position: fixed;
@@ -111,7 +98,8 @@ body {
     left: 0;
     width:100%;
     height:100%;
-    background-color: rgba(249, 249,249, 0.4);
+    background-color:#FFFFFF;
+     /*rgba(249, 249,249, 0.4);*/
 }
 .icon-bar{
     background-color:white;
