Final build and tested

--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@ body{
 }
 #loader {
     position:fixed;
-    top: 25%;
+    top: 50%;
     left: 38%;
     width:80px;
     height:80px;
@@ -94,7 +94,7 @@ body{
 #loaderbackground
 {
     position:fixed;
-    top: 0;
+    top: 126px;
     left: 0;
     bottom:0;
     width:100%;
