--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,11 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+/*////////////////////Angular Loading Fixed ng-cloak//////////////////////////////////*/
+[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important
+}
+/*////////////////////Angular Loading Fixed with ng-cloak //////////////////////////////////*/
 html{
     -webkit-user-select: none;
     -webkit-touch-callout: none;  
@@ -77,7 +82,7 @@ body{
     background-color:white;
 }
 #tablebody{
-    margin-top:106px;
+    margin-top:125px;
     left: 0;
     right: 0;
     padding:0px;
